# 55tec_connection_tester

./: README.md  pyproject.toml  requirements.txt
src/: main.py  setup.py
src/connection/: connection.py
src/connection/services/: browser_checker.py  health_check.py  internet_speed.py  logger.py  notification_screen.py  ports_checker.py
