[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connection"
version = "1.0.0"
authors = [
  { name="Diogo Coutinho - 55pbx", email="diogo.coutinho@55pbx.com" },
]
description = "Module to test user connection"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DiogoPasquali/55tec_connection_tester"
"Bug Tracker" = "https://github.com/DiogoPasquali/55tec_connection_tester/issues"